# text_purifier_c

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  codecov.yml  configure.ac  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_func.html  index.html  navtreedata.js  navtreeindex0.js  text__purifier__c_8h.html  text__purifier__c_8h.js  text__purifier__c_8h_source.html
.circleci/: config.yml
docs/: Doxyfile.in  Makefile.am  mainpage.md
include/: text_purifier_c.h
m4/: .gitignore
search/: all_0.js  files_0.js  functions_0.js  pages_0.js
src/: Makefile.am  text_purifier.cpp
test/: Makefile.am  cppcheck.sh  main.cpp  test.cpp  test.h  test_util.h  valgrind.sh
